index.css
* {
    margin: 0;
    padding: 0;
}

body {
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #faf4ed;
}

main {
    border-width: 2px;
    border-color: #797593;
    border-style: solid;
    border-radius: 4px;
    width: 440px;
    height: 480px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
}

#display {
    width: 340px;
    height: 80px;
    display: flex;
    justify-content: end;
    align-items: center;
    font-size: 32px;
    border-color: #797593;
    border-width: 2px;
    border-style: solid;
}

#buttons {
    width: 100%;
    height: 360px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-evenly;
}

button {
    width: 80px;
    height: 40px;
    background-color: #faf4ed;
    border-color: #9893a5;
    border-width: 2px;
    border-radius: 4px;
    outline: none;
    box-shadow: none;
}

.operator-button {
    background-color: #286983;
    color: #faf4ed;
}

#equal {
    background-color: #ea9d34;
    color: #faf4ed;
}

